--- a/inmigracion.html
+++ b/inmigracion.html
@@ -43,8 +43,11 @@
         <div class="card">
           <img src="ambiente.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Medio Ambiente</h5>
-            <p class="card-text">Paisaje pampeano, clima templado y suelos fértiles que marcaron la vida en la región.</p>
+            <h5 class="card-title">Población temprana y colonización (1855–1870s) 
+</h5>
+            <p class="card-text">En las décadas de 1850–60 se inician los primeros asentamientos tras campañas contra pueblos originarios, con el establecimiento del fortín en el arroyo Tapalquén (1855–1864) .
+
+Con la creación del pueblo en 1867 y el partido en 1878, se fomentó la llegada de extranjeros para colonización, incluyendo alemanes del Volga desde 1878 en Colonia Hinojo, San Miguel y Nievas, dedicados al cultivo de trigo </p>
           </div>
         </div>
       </div>
@@ -52,8 +55,13 @@
         <div class="card">
           <img src="prehistoria.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Prehistoria</h5>
-            <p class="card-text">Grupos originarios poblaron la zona hace más de 10.000 años, dejando huellas en la tierra.</p>
+            <h5 class="card-title">Gran inmigración europea (1880–1920)
+</h5>
+            <p class="card-text">Llegaron principalmente italianos (1873) y españoles, quienes formaron sociedades mutuales (“Menotti-Garibaldi”) en 1873 para apoyo social .
+
+Se establecieron también comunidades portugueses y sirio-libanesas (“turcos”), especialmente alrededor de Necochea y el barrio “de la medialuna” .
+
+Para finales de siglo, Alemanes del Volga contaban con una fuerte presencia rural, consolidada con la fundación de Colonias como Hinojo (1878) .</p>
           </div>
         </div>
       </div>
@@ -61,8 +69,13 @@
         <div class="card">
           <img src="pueblos.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Pueblos Originarios</h5>
-            <p class="card-text">La cultura catriel y otras parcialidades vivieron e intercambiaron en este territorio.</p>
+            <h5 class="card-title">Consolidación cultural e institucional (1920–2000)
+</h5>
+            <p class="card-text">Las colectividades europeas fortalecieron sus instituciones: clubes sociales (como el Club Portugués en 1929) y redes de mutuales .
+
+Nacieron museos y centros culturales en torno a las colonias—por ejemplo, el Museo de los Alemanes del Volga en Hinojo en 1998—resguardando tradiciones y herencia .
+
+La ciudad creció con estas bases multiculturales, integrando descendientes a su tejido social y económico (industria, comercio, agropecuaria).</p>
           </div>
         </div>
       </div>
@@ -70,8 +83,12 @@
         <div class="card">
           <img src="fortines.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Fortines</h5>
-            <p class="card-text">Construcciones defensivas del siglo XIX que marcaron el avance estatal sobre la frontera.</p>
+            <h5 class="card-title">Nuevos flujos migratorios en el siglo XXI</h5>
+            <p class="card-text">A partir de fines de los 2010 y sobre todo en 2024–2025, se observa un cambio en el origen de los inmigrantes: predominan venezolanos, seguidos por procedencias de países limítrofes como Bolivia, Perú, Colombia y Paraguay .
+
+Las oficinas locales del Renaper y operativos de Migraciones han intensificado sus acciones —21 operativos en tres años— facilitando la regularización de residencia, acceso a DNI temporario/permanente, trabajo formal y educación .
+
+Además, se han registrado solicitudes de nacionalización de extranjeros, incluidos cubanos y europeos tradicionales, aunque en menor medida </p>
           </div>
         </div>
       </div>
