--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,7 @@
 
 <body class="body1">
     <div class=" container text-center d-flex flex-column justify-content-center align-items-center vh-100">
-        <h1 class="titulo fade-in">HISTORIA</h1>
+        <h1 class="titulo fade-in">HISTORIA DE OLAVARRIA</h1>
         <p class="subtitulo">Explora las épocas del pasado</p>
     
         <div class="timeline-container mt-4">
