--- a/pueblosOriginarios.html
+++ b/pueblosOriginarios.html
@@ -41,37 +41,39 @@
     <div class="row">
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="ambiente.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/etapa_1.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Medio Ambiente</h5>
-            <p class="card-text">Paisaje pampeano, clima templado y suelos fértiles que marcaron la vida en la región.</p>
+            <h5 class="card-title">Tiempos ancestrales (hasta el siglo XVI): Vida en armonía con el entorno</h5>
+            <p class="card-text">Mucho antes de la llegada europea, la región que hoy es Olavarría estaba habitada por comunidades originarias que vivían en estrecho vínculo con la naturaleza. Vestigios arqueológicos hallados en el sitio Campo Laborde evidencian la presencia de grupos cazadores-recolectores desde hace más de 10.000 años. Estos pueblos conocían profundamente el ambiente serrano y pampeano, y desarrollaron formas de vida sostenibles, basadas en la observación del entorno y la transmisión oral de saberes.</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="prehistoria.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/etapa_2.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Prehistoria</h5>
-            <p class="card-text">Grupos originarios poblaron la zona hace más de 10.000 años, dejando huellas en la tierra.</p>
+            <h5 class="card-title">Época del contacto y resistencia (siglos XVI–XVIII): Primeros choques con el mundo europeo</h5>
+            <p class="card-text">Con la llegada de los españoles, comenzaron los desplazamientos, tensiones y adaptaciones culturales. En esta región, comunidades tehuelches, pampas y luego mapuchizadas mantuvieron resistencias activas y relaciones complejas con el mundo criollo. Fue en este contexto que surgieron figuras clave como el cacique Cipriano Catriel y, más tarde, su hijo Venancio Catriel, quienes lideraron a sus comunidades en una etapa de negociaciones, pactos y también enfrentamientos. La parcialidad de los Catriel habitó y recorrió este territorio, conformando una presencia estable que articuló redes de intercambio y defensa territorial.</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="pueblos.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/etapa_3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Pueblos Originarios</h5>
-            <p class="card-text">La cultura catriel y otras parcialidades vivieron e intercambiaron en este territorio.</p>
+            <h5 class="card-title">Avance del Estado y despojo territorial (siglo XIX): La Campaña al Desierto y sus consecuencias</h5>
+            <p class="card-text">Durante este período, el avance del Estado nacional se volvió más agresivo. Aunque Venancio Catriel inicialmente mantuvo acuerdos con las autoridades nacionales, las tensiones derivaron en rupturas y conflictos. La Batalla de Sierra Chica en 1855 enfrentó a las fuerzas comandadas por Catriel con el ejército nacional, en uno de los episodios más significativos de la región. A partir de entonces, los pueblos originarios fueron despojados de sus tierras, perseguidos o reducidos, y su cultura fue sistemáticamente invisibilizada. El linaje Catriel, que había sido central en el equilibrio regional, fue quebrado por la violencia estatal.</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="fortines.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/etapa_4.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Fortines</h5>
-            <p class="card-text">Construcciones defensivas del siglo XIX que marcaron el avance estatal sobre la frontera.</p>
+            <h5 class="card-title"> Recuperación de la memoria y lucha por los derechos (siglo XX–XXI): Visibilidad y reconocimiento</h5>
+            <p class="card-text">En las últimas décadas, se ha iniciado un proceso de reconocimiento y reivindicación de los pueblos originarios, sus derechos y su legado cultural. Diversas iniciativas académicas, comunitarias y educativas trabajan para rescatar la historia de Catriel y su pueblo, así como su relación con el territorio olavarriense. Se promueve el respeto por las cosmovisiones indígenas, la recuperación del idioma y la identidad, y la inclusión de esta historia en los relatos oficiales. La figura de Catriel, durante años ignorada o reducida a un mito, empieza a ocupar el lugar que le corresponde como protagonista de una historia regional rica, conflictiva y viva.
+
+</p>
           </div>
         </div>
       </div>
