--- a/prehistoria.html
+++ b/prehistoria.html
@@ -14,7 +14,7 @@
 <div class="container d-flex flex-column">
 <a class="navbar-brand" href="#">
 <img src="./imagenes/logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
-la Prehistoria
+Nuestra Prehistoria
 </a>
 <div class="d-flex justify-content-center">
 <ul class="navbar-nav">
