--- a/inmigracion.html
+++ b/inmigracion.html
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="ambiente.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/1e.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Población temprana y colonización (1855–1870s) 
 </h5>
@@ -53,7 +53,7 @@ Con la creación del pueblo en 1867 y el partido en 1878, se fomentó la llegada
       </div>
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="prehistoria.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/2e.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Gran inmigración europea (1880–1920)
 </h5>
@@ -67,7 +67,7 @@ Para finales de siglo, Alemanes del Volga contaban con una fuerte presencia rura
       </div>
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="pueblos.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/3e.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Consolidación cultural e institucional (1920–2000)
 </h5>
@@ -81,7 +81,7 @@ La ciudad creció con estas bases multiculturales, integrando descendientes a su
       </div>
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="fortines.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/4e.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nuevos flujos migratorios en el siglo XXI</h5>
             <p class="card-text">A partir de fines de los 2010 y sobre todo en 2024–2025, se observa un cambio en el origen de los inmigrantes: predominan venezolanos, seguidos por procedencias de países limítrofes como Bolivia, Perú, Colombia y Paraguay .
