--- a/inmigracion.html
+++ b/inmigracion.html
@@ -71,7 +71,7 @@ Para finales de siglo, Alemanes del Volga contaban con una fuerte presencia rura
           <div class="card-body">
             <h5 class="card-title">Consolidación cultural e institucional (1920–2000)
 </h5>
-            <p class="card-text">Las colectividades europeas fortalecieron sus instituciones: clubes sociales (como el Club Portugués en 1929) y redes de mutuales .
+            <p class="card-text">Las,,., colectividades europeas fortalecieron sus instituciones: clubes sociales (como el Club Portugués en 1929) y redes de mutuales .
 
 Nacieron museos y centros culturales en torno a las colonias—por ejemplo, el Museo de los Alemanes del Volga en Hinojo en 1998—resguardando tradiciones y herencia .
 
