--- a/siglo20.html
+++ b/siglo20.html
@@ -41,37 +41,39 @@
     <div class="row">
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="ambiente.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/siglo1.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Medio Ambiente</h5>
-            <p class="card-text">Paisaje pampeano, clima templado y suelos fértiles que marcaron la vida en la región.</p>
+            <h5 class="card-title"> Primeras Décadas del Siglo (1900–1930) – Urbanización y Ferrocarril</h5>
+            <p class="card-text">Durante este período, Olavarría experimenta un fuerte crecimiento urbano vinculado al impulso del ferrocarril y la consolidación como centro agrícola y ganadero. Se construyen edificios públicos, crece la infraestructura y se afianzan instituciones educativas y sociales. La estación de tren se convierte en un nodo estratégico, y se instalan nuevas fábricas e industrias vinculadas al campo.</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="prehistoria.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/siglo2.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Prehistoria</h5>
-            <p class="card-text">Grupos originarios poblaron la zona hace más de 10.000 años, dejando huellas en la tierra.</p>
+            <h5 class="card-title">Industrialización y Obra Pública (1930–1960) – Cemento, Ladrillos y Concreto</h5>
+            <p class="card-text">Se consolida el perfil industrial de Olavarría, especialmente con el desarrollo del polo cementero, que le dará a la ciudad proyección nacional. Comienzan las actividades extractivas a gran escala, y se expande la construcción pública y privada. Se fundan cooperativas y gremios obreros, y la ciudad crece territorialmente con nuevos barrios populares.</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="pueblos.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/siglo3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Pueblos Originarios</h5>
-            <p class="card-text">La cultura catriel y otras parcialidades vivieron e intercambiaron en este territorio.</p>
+            <h5 class="card-title">Transformaciones Sociales y Urbanas (1960–1980) – Migraciones, Barrios y Cultura</h5>
+            <p class="card-text">La ciudad vive una intensa transformación demográfica y social, con migraciones internas y llegada de familias desde el norte del país. Surgen nuevos barrios y se afianza una identidad urbana diversa. Aparecen clubes, centros culturales y nuevas formas de vida urbana. También se produce una fuerte politización social y sindicalismo activo.</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 fade-in">
         <div class="card">
-          <img src="fortines.jpg" class="card-img-top" alt="...">
+          <img src="./imagenes/siglo4.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Fortines</h5>
-            <p class="card-text">Construcciones defensivas del siglo XIX que marcaron el avance estatal sobre la frontera.</p>
+            <h5 class="card-title">Modernización y Reconversión Económica (1980–2000) – Tecnología, Educación y Servicios</h5>
+            <p class="card-text">Durante las últimas décadas del siglo, Olavarría avanza hacia una economía de servicios, con fuerte inversión en educación, salud y tecnología. Se crean universidades, centros de investigación y se diversifican las actividades económicas. La ciudad enfrenta desafíos sociales y medioambientales vinculados al modelo extractivo e industrial previo.
+
+</p>
           </div>
         </div>
       </div>
