--- a/prehistoria.html
+++ b/prehistoria.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <div class="container d-flex flex-column">
 <a class="navbar-brand" href="#">
-<img src="./imagenes/logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+<img src="./imagenes/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-center">
 Nuestra Prehistoria
 </a>
 <div class="d-flex justify-content-center">
