--- a/siglo20.html
+++ b/siglo20.html
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container d-flex flex-column">
       <a class="navbar-brand" href="#">
-        <img src="./imagenes/logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+        <img src="./imagenes/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-center">
         Historia de Olavarría
       </a>
       <div class="d-flex justify-content-center">
