--- a/index.html
+++ b/index.html
@@ -1,22 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-
-    <link rel="stylesheet" href="./estilos.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cards centradas con flip</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    html, body {
+      height: 100%;
+    }
+    .full-vh {
+      height: 100vh;
+    }
+    .flip-card {
+      background: transparent;
+      width: 200px;
+      height: 140px;
+      perspective: 1000px;
+    }
+    .flip-card-inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
+    }
+    .flip-card:hover .flip-card-inner,
+    .flip-card:focus-within .flip-card-inner {
+      transform: rotateY(180deg);
+    }
+    .flip-card-front, .flip-card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      border-radius: 0.75rem;
+      overflow: hidden;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .flip-card-front img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 0.75rem;
+      display: block;
+    }
+    .flip-card-back {
+      background: #343a40;
+      color: #fff;
+      transform: rotateY(180deg);
+      font-size: 1.1rem;
+      padding: 1rem;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      text-align: center;
+    }
+    /* Responsive para móviles: las tarjetas una debajo de otra */
+    @media (max-width: 768px) {
+      .cards-row {
+        flex-direction: column !important;
+        align-items: center !important;
+      }
+      .flip-card {
+        margin-bottom: 24px;
+      }
+    }
+  </style>
 </head>
-<body class="body2">
-   <!-- Video de fondo -->
-   <video class="video-fondo" autoplay muted loop playsinline>
-    <source src="./imagenes/videoParaPaginaHistoria.mp4" type="video/mp4" />
-    Tu navegador no soporta video HTML5.
-  </video>
+<body class="bg-light">
 
-  <!-- Botón centrado -->
-  <div class="contenido">
-    <a href="page1.html" class="boton-inicio">Inicio</a>
+  <div class="container-fluid full-vh d-flex justify-content-center align-items-center">
+    <div class="d-flex cards-row gap-4 justify-content-center align-items-center flex-wrap">
+      <!-- Card 1 -->
+      <div class="flip-card" tabindex="0">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./imagenes/intro1.png" alt="Imagen 1">
+          </div>
+          <div class="flip-card-back">
+           <a href="./nivelInicial/indexNivelInicial.html"><span>Ingresar al contenido adaptado a infancias</span></a> 
+          </div>
+        </div>
+      </div>
+      <!-- Card 2 -->
+      <div class="flip-card" tabindex="0">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./imagenes/intro2.png" alt="Imagen 2">
+          </div>
+          <div class="flip-card-back">
+           <a href="./nivelPrimero/indexNivelPrimario.html"><span>Ingresar al contenido adaptado a nivel primario</span></a> 
+          </div>
+        </div>
+      </div>
+      <!-- Card 3 -->
+      <div class="flip-card" tabindex="0">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./imagenes/intro3.png" alt="Imagen 3">
+          </div>
+          <div class="flip-card-back">
+            <a href="./nivelSecundario/indexNivelSecundario.html"><span>Ingresar al contenido adaptado a nivel secundario</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <!-- Bootstrap JS (opcional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
