--- a/nivelSecundario/fortinesFundacion.html
+++ b/nivelSecundario/fortinesFundacion.html
@@ -6,14 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Historia de Olavarría</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./estilos.css">
+<link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <div class="container d-flex flex-column">
 <a class="navbar-brand" href="#">
-<img src="./imagenes/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-center">
+<img src="../imagenes/" alt="Logo" width="100" height="100" class="d-inline-block align-text-center">
 Historia de Olavarría
 </a>
 <div class="d-flex justify-content-center">
